# parivartana

./: .env.example  .gitignore  CONTRIBUTING.md  Final_Report_PARIVARTANA.docx  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py  ast_view.py  conversion_history.py  python_ast_view.py  theme.py
app/pages/: 1_Workspace.py  2_Batch_Run.py  3_Datasets.py  4_Pipeline_Config.py  5_Metrics.py  6_Settings.py  7_Past_Runs.py
artifacts/runs/: IC217A__IC217A__1779215094.json  IC217A__IC217A__1779386212.json  IC217A__IC217A__1779534069.json  IC217A__IC217A__1779638034.json  IC217A__IC217A__1779997180.json  IC217A__IC217A__1780336594.json  (+49 more)
configs/: datasets.yaml  evaluation.yaml  models.yaml  pipeline.yaml
docs/: Discussion_Post_PARIVARTANA.docx  architecture.md  audit_steps_implementation.md  conversion_quality_audit.md  datasets.md  improvement_backlog.md  neural_m3_and_feedback.md  neural_training_optimization_plan.md  neural_training_plan.md  post_v1_fixes_log.md  results_report.md  runs_comparison.md  ux_design.md  v11_v16_ablation_log.md  v12_verified_climb.md  v13_arithmetic_coercion.md  v13_clean.md  v13_deep_analysis.md  v14_io_handling.md  v14_oracle_diagnosis.md  v17_v18_fix_log.md  v6_conversion_fixes.md  v7_actual_pass_lift.md  v8_pass_improvements.md  v9_pass_regression_fix.md  v9_promote_bridge.md
notebooks/: parivartana_walkthrough.html  parivartana_walkthrough.ipynb
scripts/: batch_run.py  build_report.py  build_training_data.py  ingest.py  merge_lora.py  preprocess.py  run_app.sh  visualize_model.py
(+13144 files in other folders)
