[project]
name = "parivartana"
version = "0.1.0"
description = "COBOL-to-Python neural transpiler with three-stage pipeline"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"
